--- a/src/components/styles/CartScreen.css
+++ b/src/components/styles/CartScreen.css
@@ -55,11 +55,30 @@
 
 .cartBTNS button{
     text-align: right;
+    /* background-color: rgb(255, 200, 0); */
+    border: none;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     cursor: pointer;
-    padding: 10px;
+    font-size: 14px;
+    border-radius: 4px;
+}
+
+.checkoutBTN{
+    background-color: rgb(255, 200, 0);
+}
+
+.closeBTN{
+    background-color: rgb(230, 230, 230);
 }
 
 .cartBTNS{
     text-align: right;
     padding-top: 20px;
+}
+
+.cart_item_wrapper{
+    /* padding-bottom: 5px; */
 }
